# AIToolbox

./: .env.example  .gitignore  README.md  SETUP_README.md  pyproject.toml
aitoolkit/backend/agents/: __init__.py  sql_agent.py
aitoolkit/backend/db/: __init__.py  schema_manager.py  vector_db_manager.py
aitoolkit/backend/llm/: __init__.py  base.py  embedding.py  groq_llm.py  openai_llm.py
aitoolkit/backend/prompts/: sql_agent_prompt.txt
aitoolkit/backend/utils/: schema_converter.py
aitoolkit/config/: __init__.py  configs.yaml  settings.py
aitoolkit/frontend/: main.py
aitoolkit/frontend/components/pages/: sql_agent_page.py
