[tool.poetry]
name = "aitoolkit"
version = "0.1.0"
description = "A unified web application for AI-powered, low-code tools."
authors = ["Sunny Raj mail.sunnyraj94@gmail.com"]
readme = "README.md"
packages = [{include = "aitoolkit"}]

[tool.poetry.dependencies]
python = ">=3.9.8,<3.15" # Specify your desired Python version range
streamlit = "^1.36.0"
python-dotenv = "1.1.1"
openai = "^1.35.1"
google-generativeai = "^0.7.0"
ollama = "^0.2.1" # Python client for Ollama
# Add other dependencies as needed for RAG (e.g., langchain, pypdf, faiss-cpu)
langchain = "^0.2.6"
langchain-community = "^0.2.6"
pypdf = "^4.2.0"
faiss-cpu = "^1.8.0" # For vector storage in RAG
tiktoken = "^0.7.0" # For token counting (useful for LLMs)
jupyter = "^1.1.1"
groq = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"